; ModuleID = '/home/carl/AnghaBench/git/extr_pretty.c_skip_blank_lines.c'
source_filename = "/home/carl/AnghaBench/git/extr_pretty.c_skip_blank_lines.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @skip_blank_lines(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  br label %5

5:                                                ; preds = %17, %1
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @get_one_line(i8* %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %3, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %5
  br label %22

12:                                               ; preds = %5
  %13 = load i8*, i8** %2, align 8
  %14 = call i32 @is_blank_line(i8* %13, i32* %4)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %12
  br label %22

17:                                               ; preds = %12
  %18 = load i32, i32* %3, align 4
  %19 = load i8*, i8** %2, align 8
  %20 = sext i32 %18 to i64
  %21 = getelementptr inbounds i8, i8* %19, i64 %20
  store i8* %21, i8** %2, align 8
  br label %5

22:                                               ; preds = %16, %11
  %23 = load i8*, i8** %2, align 8
  ret i8* %23
}

declare dso_local i32 @get_one_line(i8*) #1

declare dso_local i32 @is_blank_line(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
